# datadog-mcp

./: .env.example  .gitignore  API_COVERAGE.md  CHANGELOG.md  Cargo.toml  IMPROVEMENTS.md  README.md  TOP_10_PRIORITIES.md
.github/workflows/: ci.yml
datadog-api/: Cargo.toml  README.md
datadog-api/benches/: serialization.rs
datadog-api/examples/: basic_usage.rs  custom_config.rs  error_handling.rs  standalone_api.rs
datadog-api/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  pagination.rs  rate_limit.rs  timestamp.rs
datadog-api/src/apis/: dashboards.rs  downtimes.rs  events.rs  incidents.rs  infrastructure.rs  logs.rs  metrics.rs  mod.rs  monitors.rs  notebooks.rs  security.rs  slos.rs  synthetics.rs  teams.rs  traces.rs  users.rs
datadog-api/tests/: integration_tests.rs  mock_api_tests.rs  proptest_serialization.rs
datadog-mcp/: Cargo.toml  GREAT_PLAN.md  IMPROVEMENTS.md  README.md  SECURITY.md
datadog-mcp/examples/: test_api.rs
datadog-mcp/src/: cache.rs  errors.rs  ids.rs  input_validation.rs  lib.rs  main.rs  mcp.rs  output.rs  response.rs  sanitize.rs  server.rs  state.rs  tool_inputs.rs  tools.rs  tools_part2.rs
datadog-mcp/src/tools/: cache_tools.rs  dashboards.rs  downtimes.rs  events.rs  incidents.rs  infrastructure.rs  logs.rs  metrics.rs  mod.rs  monitors.rs  notebooks.rs  security.rs  slos.rs  synthetics.rs  teams.rs  users.rs  validation.rs
datadog-mcp/tests/: integration_tests.rs  tool_http_mocks.rs
