[workspace]
resolver = "2"
members = [
    "datadog-api",
    "datadog-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Datadog MCP Server"]
license = "MIT"

[workspace.dependencies]
# Async runtime (only features actually needed)
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Text processing
regex = "1.12"

# Memory safety
zeroize = { version = "1.8", features = ["derive"] }

# Secure storage (platform keyrings)
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

# JSON-RPC
async-trait = "0.1"
