[workspace]
resolver = "2"
members = [
    "datadog-api",
    "datadog-mcp",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Jimmy Stridh"]
license = "MIT"
repository = "https://github.com/jimmystridh/datadog-mcp"
homepage = "https://github.com/jimmystridh/datadog-mcp"

[workspace.dependencies]
# Async runtime (only features actually needed)
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.13", features = ["json", "query", "rustls", "gzip"], default-features = false }
reqwest-middleware = { version = "0.5", features = ["query"] }
reqwest-retry = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Text processing
regex = "1.12"

# Memory safety
zeroize = { version = "1.8", features = ["derive"] }

# Secure storage (platform keyrings)
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

# JSON-RPC
async-trait = "0.1"
