[package]
name = "datadog-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.1"
wiremock = "0.6"
